--- a/elk_log/logstash/pipeline/logstash.conf
+++ b/elk_log/logstash/pipeline/logstash.conf
@@ -7,13 +7,14 @@ input {
 }
 
 filter {
-  # Можна додати фільтри для парсингу Nginx логів, якщо потрібно
+  
   grok {
-    match => { "message" => "%{IPV4:client_ip} - %{DATA:user} \[%{HTTPDATE:timestamp}\] \"%{WORD:method} %{URIPATHPARAM:request} HTTP/%{NUMBER:http_version}\" %{NUMBER:status} %{NUMBER:bytes}" }
-  }
+  match => { "message" => "%{IPV4:client_ip} - %{DATA:user} \[%{HTTPDATE:timestamp}\] \"%{WORD:method} %{URIPATHPARAM:request} HTTP/%{NUMBER:http_version}\" %{NUMBER:status} %{NUMBER:bytes} \"%{DATA:referer}\" \"%{DATA:user_agent}\"" }
+}
 
   date {
-    match => [ "timestamp", "dd/Mon/YYYY:HH:mm:ss Z" ]
+    match => [ "timestamp", "dd/MMM/yyyy:HH:mm:ss Z" ]
+    target => "@timestamp"
   }
 }
 
@@ -22,6 +23,6 @@ output {
     hosts => ["http://elasticsearch:9200"]
     index => "nginx-logs-%{+YYYY.MM.dd}"
     user => "elastic"
-    password => "changeme"
+    password => "changeme"  # Забезпечте зберігання пароля через змінні середовища
   }
 }
