--- a/elk_log/docker-compose.yml
+++ b/elk_log/docker-compose.yml
@@ -7,11 +7,13 @@ services:
     environment:
       - discovery.type=single-node
       - ELASTIC_PASSWORD=changeme  # Задайте пароль для суперкористувача
-        #      - xpack.security.enabled=false  
+        #      - xpack.security.enabled=false
+      - ES_JAVA_OPTS=-Xms1g -Xmx1g
     ports:
       - "9200:9200"  # Порт для доступу до Elasticsearch
     volumes:
       - es_data:/usr/share/elasticsearch/data  # Зберігання даних на хості
+      - ./es_users/roles.yml:/usr/share/elasticsearch/config/roles.yml  
     networks:
       - elk
     restart: always
@@ -26,6 +28,7 @@ services:
     volumes:
       - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml
       - ./logstash/pipeline:/usr/share/logstash/pipeline
+      - ./nginx/logs:/usr/share/logstash/logs/nginx
     networks:
       - elk
     depends_on:
@@ -37,7 +40,7 @@ services:
     image: docker.elastic.co/kibana/kibana:8.9.0
     environment:
       - ELASTICSEARCH_URL=http://elasticsearch:9200
-      - ELASTICSEARCH_USERNAME=kibana_use
+      - ELASTICSEARCH_USERNAME=kibana_user
       - ELASTICSEARCH_PASSWORD=q1w2e3r4 # Пароль користувача
     ports:
       - "5601:5601"  # Порт для доступу до інтерфейсу Kibana
